--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -4,8 +4,6 @@
 }
 .calendar {
     margin: 10px auto;
-}
-table {
     border-collapse: collapse;
 }
 td, th {
@@ -23,10 +21,12 @@ th {
 .cell:hover {
     background-color: #ddd;
 }
-
+.cell__hasNote {
+    background-color: #f06fc5;
+}
 .btn {
     display: inline-block;
-    margin: 8px;
+    margin: 20px 4px;
     font-weight: 400;
     text-align: center;
     white-space: nowrap;
@@ -69,11 +69,19 @@ th {
     transition: opacity .5s linear;
 }
 .modal_dialog {
+    box-sizing: border-box;
     width: 600px;
-    height: 300px;
+    height: 350px;
     margin: 30px auto;
-    padding: 6px;
+    padding: 50px 50px 15px;
     background-color: #fff;
     border-radius: 6px;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
+}
+.text_area {
+    box-sizing: border-box;
+    resize: none;
+    width: 500px;
+    height: 200px;
+    padding: 0;
 }
