--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -18,6 +18,7 @@ th {
 .cell {
     cursor: pointer;
 }
+.btn:hover,
 .cell:hover {
     background-color: #ddd;
 }
@@ -25,26 +26,14 @@ th {
     background-color: #f06fc5;
 }
 .btn {
-    display: inline-block;
     margin: 20px 4px;
     font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
     cursor: pointer;
-    background-image: none;
     border: 1px solid black;
     border-radius: 4px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 .modal {
@@ -53,29 +42,16 @@ th {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1050;
-    display: none;
-    overflow: hidden;
-    -webkit-overflow-scrolling: touch;
-    background-color: rgba(200,200,200,0.5);
-    opacity: 0;
-    transition: opacity .5s linear;
-}
-.modal.modal__show {
-    display: block;
-}
-.modal.modal__opasity {
-        opacity: 1;
-    transition: opacity .5s linear;
+    z-index: 100500;
+    background-color: rgba(0,0,0,0.5);
 }
 .modal_dialog {
     box-sizing: border-box;
     width: 600px;
-    height: 350px;
     margin: 30px auto;
     padding: 50px 50px 15px;
     background-color: #fff;
-    border-radius: 6px;
+    border-radius: 12px;
     box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 .text_area {
@@ -83,5 +59,4 @@ th {
     resize: none;
     width: 500px;
     height: 200px;
-    padding: 0;
 }
